[FIX] AddAssignmentAndContent